


2024-11-19  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_sys_window), system.def, common.h:
	  command as separate first argument
	* screenio.c [WITH_PANELS]: more refactoring including:
	  variable amount of elements for LIST command;
	  parameter struture changes from int to short;
	  new commands get+set attributes;
	  hidden now attribute in the flags instead of separate element,
	  preparation for new attributes wrap + scroll;
	  reverse panel_hidden return code handling
	* screenio.c (cob_exit_screen): always use stdscr for exit message

2024-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c [WITH_PANELS]: minor refactoring including move of
	  return code out of PPARM_FLD
	* screenio.c (cob_sys_window): when function not available and in
	  testmode, return 77 so test is skipped

2024-11-01  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* screenio.c: added new functions for multiple window support;
	  also added new static variables to support panel functions
	  and a static array to store information about the panels
	  which have been created.
		cob_sys_window
		check_panel_parm
		cob_update_all_windows
		refresh_mywin
	* common.h: added cob_sys_window
	* system.def: added system library call CBL_GC_WINDOW

2024-10-22  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* screenio.c (cob_screen_get_all): fixed Bug #999
	  directly position to the cursor position within the
	  field according to CURSOR clause

2024-10-04  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sig_handler): moved call of cob_exit_screen_from_signal
	  from ss_terminate_routines here instead of calling cob_exit_screen
	* common.c (cob_sig_handler, cob_stack_trace_internal,
	  cob_runtime_warning_ss): now using an internal buffer to output data
	  instead of potentially hundreds of small direct writes, output the
	  complete buffer when half-full oir at the end
	* common.c (get_source_location): renamed from output_source_location,