@@ -1,5 +1,15 @@
 
+2024-11-22  David Declerck <david.declerck@ocamlpro.com>
 
+	* move.c (optimized_move_display_to_edited): minor refactoring
+	* exception.def, move.c: added definition for COBOL2025
+	  COB_EC_DATA_NULL + COB_EC_DATA_TRUNCATION (currently not used)
+
+2024-11-22  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>
+
+	* move.c (optimized_move_display_to_edited): fixed
+	  Bug #1008: regression in move to numeric edited
+	  items with insertion symbols B, 0 and /
 
 2024-11-19  Simon Sobisch <simonsobisch@gnu.org>
 
